--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                 <h2>Ready to Get Started?</h2>
                 <p>Take our 30 second quiz to get your fast and free quote</p>
                 <div class="tally-form-container">
-                    <iframe data-tally-src="https://tally.so/embed/wgQP9g?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" 
+                    <iframe data-tally-src="https://tally.so/embed/wA56Ao?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" 
                             loading="lazy" 
                             width="100%" 
                             height="400" 
