--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
 
         .site-header {
-            background: rgba(255, 255, 255, 0.95);
+            background: #ffffff;
             backdrop-filter: none;
             padding: 1rem 0;
             box-shadow: 0 2px 20px rgba(0,0,0,0.1);
@@ -69,17 +69,13 @@
             padding: 0 20px;
         }
 
-        .hero {
-            background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('data:image/svg+xml,<svg xmlns="https://v5.airtableusercontent.com/v3/u/41/41/1749031200000/bYjz-3BZ1SbSFBaGsKv28w/MYfGDB69r5ubZmIPrVUOYfwwX8HFyKGlqHOEl4hGkW1t9v5WRGDbQXKDL7t7ki49-rAvNmaK8WDfC-SHtFPPTGotKAQCP20F2fUk7y1MDQPcGVHwk4K2XP-BQ0WBMLonTjP-WIA8_c9tgwPzFyaF5A/uXa09R6ODumyuuD2BS3x7BYTX7ArQdX8gB5Q8tc7hPM" viewBox="0 0 1200 600"><rect fill="%23334155" width="1200" height="600"/><polygon fill="%23475569" points="0,600 200,400 400,500 600,300 800,450 1000,250 1200,400 1200,600"/></svg>');
-            background-size: cover;
-            background-position: center;
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            text-align: center;
-            color: white;
-            position: relative;
-        }
+.hero {
+    background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
+                url('https://v5.airtableusercontent.com/v3/u/41/41/1749031200000/bYjz-3BZ1SbSFBaGsKv28w/MYfGDB69r5ubZmIPrVUOYfwwX8HFyKGlqHOEl4hGkW1t9v5WRGDbQXKDL7t7ki49-rAvNmaK8WDfC-SHtFPPTGotKAQCP20F2fUk7y1MDQPcGVHwk4K2XP-BQ0WBMLonTjP-WIA8_c9tgwPzFyaF5A/uXa09R6ODumyuuD2BS3x7BYTX7ArQdX8gB5Q8tc7hPM');
+    background-size: cover;
+    background-position: center;
+    ...
+}
 
         .hero-content {
             z-index: 2;
