--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             background: #ffffff;
             backdrop-filter: none;
             padding: 1rem 0;
-            box-shadow: 0 2px 20px rgba(0,0,0,0.1);
+            box-shadow: none;
             transition: all 0.3s ease;
         }
 
