--- a/index.html
+++ b/index.html
@@ -284,24 +284,27 @@
         }
 
         .quiz-container {
-            background: rgba(255,255,255,0.1);
-            backdrop-filter: blur(10px);
+            background: #ffffff;
+            backdrop-filter: none;
             border-radius: 20px;
             padding: 3rem;
             max-width: 600px;
             margin: 0 auto;
-            border: 1px solid rgba(255,255,255,0.2);
+            border: none;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
         }
 
         .quiz-container h2 {
             font-size: 2.5rem;
             margin-bottom: 1rem;
+            color: #333;
         }
 
         .quiz-container p {
             font-size: 1.2rem;
             margin-bottom: 2rem;
-            opacity: 0.9;
+            opacity: 1;
+            color: #666;
         }
 
         .tally-form-container {
