--- a/index.html
+++ b/index.html
@@ -98,9 +98,10 @@
 
         .hero h1 {
             font-size: 3.5rem;
-            margin-bottom: 1rem;
+            margin-bottom: 0.5rem;
             font-weight: bold;
             color: #2c3e50;
+            line-height: 1.1;
         }
 
         .hero .subtitle {
@@ -395,7 +396,7 @@
             }
 
             .hero {
-                padding-top: 0;
+                padding-top: 120px;
             }
 
             .testimonial-author-section {
