--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             margin-bottom: 0.5rem;
             font-weight: bold;
             color: #2c3e50;
-            line-height: 1.1;
+            line-height: 1.2;
         }
 
         .hero .subtitle {
@@ -111,11 +111,13 @@
         }
 
         .highlight {
-            background: linear-gradient(120deg, #fff700 0%, #ffed4e 100%);
-            padding: 2px 6px;
+            background: rgba(255, 247, 0, 0.7);
+            padding: 1px 6px;
             border-radius: 4px;
             font-weight: bold;
             color: #2c3e50;
+            display: inline-block;
+            line-height: 1.1;
         }
 
         .hero-form-container {
@@ -396,7 +398,7 @@
             }
 
             .hero {
-                padding-top: 120px;
+                padding-top: 60px;
             }
 
             .testimonial-author-section {
