--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             border-radius: 4px;
             font-weight: bold;
             color: #2c3e50;
-            display: inline-block;
+            display: inline;
             line-height: 1.1;
         }
 
