--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         }
 
         .hero-text-container {
-            background: rgba(255,255,255,0.95);
+            background: #ffffff;
             border-radius: 15px;
             padding: 30px;
             margin-bottom: 30px;
@@ -121,7 +121,7 @@
         }
 
         .hero-form-container {
-            background: rgba(255,255,255,0.95);
+            background: #ffffff;
             border-radius: 15px;
             padding: 20px;
             box-shadow: 0 10px 30px rgba(0,0,0,0.2);
