--- a/Roofingtemplate.html
+++ b/Roofingtemplate.html
@@ -70,7 +70,7 @@
         }
 
         .hero {
-            background: url('https://v5.airtableusercontent.com/v3/u/41/41/1749045600000/DbVpzE4Ls48DAdu-gNlGUw/8a19-5fRYaekUxXg00tnlRCCyF8QSqA5GRoVU5zWcmB6N8Q5OYqJNMP2OrI0GHdhTUkqp6_EQsqISwu5YoecfYarhR7SG-xb4PF-r2gzsO0gsTe688Ud9bdeydUeaslIH4VsSQBLSfo1_Kkiouu0HA/ftcmXROFyWSEqzpvr4TUTi9D99sGnrzpN5axacpNdFc');
+            background: url('https://raw.githubusercontent.com/peakleadsgroup/landing-pages/refs/heads/main/Images/Roof%20Back%20(1).png');
             background-size: cover;
             background-position: center;
             padding: 150px 0 100px 0;
