--- a/Sidingtemplate.html
+++ b/Sidingtemplate.html
@@ -70,7 +70,7 @@
         }
 
         .hero {
-            background: url('https://v5.airtableusercontent.com/v3/u/41/41/1749031200000/bYjz-3BZ1SbSFBaGsKv28w/MYfGDB69r5ubZmIPrVUOYfwwX8HFyKGlqHOEl4hGkW1t9v5WRGDbQXKDL7t7ki49-rAvNmaK8WDfC-SHtFPPTGotKAQCP20F2fUk7y1MDQPcGVHwk4K2XP-BQ0WBMLonTjP-WIA8_c9tgwPzFyaF5A/uXa09R6ODumyuuD2BS3x7BYTX7ArQdX8gB5Q8tc7hPM');
+            background: url('https://raw.githubusercontent.com/peakleadsgroup/landing-pages/refs/heads/main/Images/Siding%20Pic.png');
             background-size: cover;
             background-position: center;
             padding: 150px 0 100px 0;
