--- a/Sidingtemplate.html
+++ b/Sidingtemplate.html
@@ -417,7 +417,7 @@
                     <img src="{{COMPANY_LOGO_URL}}" alt="{{COMPANY_NAME}} Logo" class="company-logo">
                 </div>
                 <div class="reviews-container">
-                    <img src="{{GOOGLE_REVIEWS_IMG_URL}}" alt="Google Reviews Score" class="google-reviews">
+                    <img src="https://raw.githubusercontent.com/peakleadsgroup/landing-pages/refs/heads/main/Images/5stargooglereviews.png" alt="Google Reviews Score" class="google-reviews">
                 </div>
             </div>
         </div>
