--- a/agreement.html
+++ b/agreement.html
@@ -292,12 +292,12 @@
                         Partnership Structure
                     </div>
                     <div class="pricing">
-                        <h4>Onboarding Package – $1,485 (due upon signing)</h4>
+                        <h4>Onboarding Package – $ONBOARDINGAMOUNT (due upon signing)</h4>
                         <p>This covers your full campaign setup and the first 15 qualified leads.</p>
                     </div>
                     <div class="pricing">
-                        <h4>Ongoing Billing – $99 per lead</h4>
-                        <p>After the initial 15 leads, you'll be billed $99 per lead, charged automatically in increments of 5 leads ($495 per charge) using the payment method on file. By entering and maintaining a valid payment method, the Client authorizes PLG to charge this method automatically in accordance with this Agreement.</p>
+                        <h4>Ongoing Billing – $PPLAMOUNT per lead</h4>
+                        <p>After the initial 15 leads, you'll be billed $PPLAMOUNT per lead, charged automatically in increments of 5 leads using the payment method on file. By entering and maintaining a valid payment method, the Client authorizes PLG to charge this method automatically in accordance with this Agreement.</p>
                     </div>
                 </div>
                 
