--- a/agreement.html
+++ b/agreement.html
@@ -293,11 +293,11 @@
                     </div>
                     <div class="pricing">
                         <h4>Onboarding Package – $ONBOARDINGAMOUNT (due upon signing)</h4>
-                        <p>This covers your full campaign setup and the first 15 qualified leads.</p>
+                        <p>This covers your full campaign setup and the first ONBOARDINGNUMBER qualified leads.</p>
                     </div>
                     <div class="pricing">
                         <h4>Ongoing Billing – $PPLAMOUNT per lead</h4>
-                        <p>After the initial 15 leads, you'll be billed $PPLAMOUNT per lead, charged automatically in increments of 5 leads using the payment method on file. By entering and maintaining a valid payment method, the Client authorizes PLG to charge this method automatically in accordance with this Agreement.</p>
+                        <p>After the initial ONBOARDINGNUMBER leads, you'll be billed $PPLAMOUNT per lead, charged automatically in increments of 5 leads using the payment method on file. By entering and maintaining a valid payment method, the Client authorizes PLG to charge this method automatically in accordance with this Agreement.</p>
                     </div>
                 </div>
                 
