--- a/agreement.html
+++ b/agreement.html
@@ -275,7 +275,7 @@
             
             <div class="content">
                 <div class="intro">
-                    <p><strong>This Service Agreement ("Agreement")</strong> is entered into by and between Peak Leads Group ("PLG") and the client ("Client"). By submitting payment for the onboarding invoice, the Client acknowledges and agrees to the terms set forth in this Agreement, and Peak Leads Group agrees to uphold its responsibilities as outlined herein. Payment constitutes mutual acceptance of this Agreement, including the services, responsibilities, and billing terms described below.</p>
+                    <p><strong>This Service Agreement ("Agreement")</strong> is entered into by and between Peak Leads Group ("PLG") and CLIENTNAME ("Client"). By submitting payment for the onboarding invoice, the Client acknowledges and agrees to the terms set forth in this Agreement, and Peak Leads Group agrees to uphold its responsibilities as outlined herein. Payment constitutes mutual acceptance of this Agreement, including the services, responsibilities, and billing terms described below.</p>
                 </div>
                 
                 <div class="section">
